# imcoreg

./: README.md  imcoreg.m
src/: CMakeLists.txt  build.sh  imcoregmx.cpp
src/cpp/: CMakeLists.txt  COPYING  Logger.hpp  cuSIFT.cpp  cuSIFT.hpp  cudaImage.cu  cudaImage.h  cudaSift.h  cudaSiftH.cu  cudaSiftH.h  cudautils.h  geomFuncs_blas.cpp  geomFuncs_blas.hpp  imwback.cu  imwback.h  test.cpp
